--- a/index.html
+++ b/index.html
@@ -346,20 +346,12 @@
     <section class="hero" aria-label="Панель управления">
       <div class="hero-top">
         <div>
-          <h1 id="title">Коллекция Текстур от Нейросетей</h1>
-          <p class="subtitle" id="subtitle">Просмотр, категоризация и скачивание твоих AI-генерированных текстур</p>
+          <h1 id="title">AI PBR Textures</h1>
+          <p class="subtitle" id="subtitle">I create these textures exclusively with artificial intelligence. They are free to use, and this library will keep evolving with new AI-made material packs.</p>
         </div>
         <div class="row">
           <button id="themeBtn" class="icon" type="button" aria-label="Переключить тему">☼</button>
-          <button id="langBtn" class="icon" type="button" aria-label="Switch language">EN</button>
         </div>
-      </div>
-
-      <div class="hint" id="deployHint">Автозагрузка из репозитория: структура <code>textures/категория/текстура/файлы</code>. Каждая папка текстуры отображается отдельной карточкой и архивируется целиком.</div>
-
-      <div class="row">
-        <label for="searchInput" class="sr" id="searchLabel">Поиск</label>
-        <input id="searchInput" class="search" type="search" placeholder="Поиск: oak, wood, metal..." />
       </div>
 
       <div id="categories" class="cats" role="tablist"></div>
